# cryptrans

./: .gitignore  ARCHITECTURE_CHANGES.md  Anchor.toml  COMPLETION_REPORT.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DIRECTORY_STRUCTURE.txt  FINAL_SUMMARY.txt  GITHUB_READY_CHECKLIST.md  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  KNOWN_ISSUES.md  LICENSE  PROJECT_STATUS.md  PROJECT_SUMMARY.md  PUBLIC_ACCESS.md  PUSH_SUMMARY.md  QUICK_START.md  QUICK_START_ZK.md  README.md  SECURITY.md  SECURITY_FIXES_SUMMARY.md  SECURITY_STATUS.md  SESSION_SUMMARY.md  START_HERE.md  SUMMARY_OF_CHANGES.txt  WHATS_NEXT.md  WINDOWS_SETUP.md  ZK_IMPLEMENTATION_ROADMAP.md  init-github.bat  init-github.sh  package-lock.json  package.json  push-to-github.sh  tsconfig.json
api/: .eslintrc.js  package-lock.json  package.json  tsconfig.json
app/: config-overrides.js  package-lock.json  package.json
bonsol-guest/: Cargo.toml  README.md
bonsol-guest/src/: main.rs
circuits/: package-lock.json  package.json  vote.circom
cli/: README.md  commands.ts  index.ts  package.json
docs/: API_ARCHITECTURE.md  AUDIT_CONTACT_CHECKLIST.md  AUDIT_PREP_COMPLETE.md  AUDIT_PREP_README.md  AUDIT_REQUEST.md  AUDIT_REQUEST_EMAIL_TEMPLATE.md  BONSOL_DEPLOYMENT.md  CLI_USER_GUIDE.md  COMPLETE_ROADMAP.md  DEPLOYMENT.md  DEVNET_TESTING_GUIDE.md  FRONTEND_SETUP_GUIDE.md  GETTING_STARTED.md  GROTH16_VERIFIER.md  INTEGRATION_TEST_GUIDE.md  MAINNET_CHECKLIST.md  MANIFESTO.md  MARKETING_STRATEGY.md  MPC_CEREMONY_PLAN.md  NEXT_MOVES.md  PATH_TO_PERFECTION.md  PHASE_3_FINAL_STATUS.md  PHASE_3_STATUS.md  PROGRESS_SUMMARY.md  PROJECTS.md  QUANTUM_100_PERCENT_PLAN.md  QUANTUM_FINAL_STATUS.md  QUANTUM_SAFE_STATUS.md  QUANTUM_SAFE_UPGRADE.md  SECURITY.md  SECURITY_AUDIT_GUIDE.md  SMART_CONTRACT.md  STATUS_REPORT.md  THIS_WEEK_ACTION_ITEMS.md  VISION_IMPLEMENTATION.md  WEEK_2_ORACLE_IMPLEMENTATION.md  WEEK_3_PLAN_TRANCHE_VOTING.md  WEEK_3_TRANCHE_VOTING_COMPLETE.md  WEEK_4_GOVERNANCE_COMPLETE.md
programs/cryptrans/: Cargo.toml  Xbuild.rs
programs/cryptrans/src/: bonsol_integration.rs  dilithium.rs  groth16_verifier.rs  lib.rs  oracle.rs  tranche.rs
scripts/: copy-idl.js  create-token.sh  deploy-api.sh  deploy-devnet.ps1  deploy-devnet.sh  deploy-frontend.sh  deploy.sh  setup.js  test-devnet.js  test-full-stack.js
(+72 files in other folders)
