[package]
name = "cryptrans-voting-zkvm"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "3.0", default-features = false, features = ["std"] }
sha2 = "0.10"
hex = "0.4"

[[bin]]
name = "voting"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
