[package]
name = "cryptrans"
version = "0.1.0"
description = "CrypTrans: Embodying Cypherpunk and Extropian Visions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cryptrans"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["associated_token"] }
sha2 = "0.10.8"
hex = "0.4.3"
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-groth16 = "0.4"
ark-relations = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }
ark-std = "0.4"
