[package]
name = "cryptrans"
version = "0.1.0"
description = "CrypTrans: Embodying Cypherpunk and Extropian Visions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cryptrans"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["associated_token"] }
sha2 = "0.10.8"
hex = "0.4.3"
# Quantum-safe post-quantum signatures (NIST FIPS 204 / ML-DSA / CRYSTALS-Dilithium)
# Note: For now, using placeholder verification. Full Dilithium via Bonsol CPI or RISC Zero guest.
# pqcrypto-dilithium = "0.5"  # Has getrandom, not BPF-compatible
